# budgetkernel

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: charge.rs
docs/: DESIGN.md  SECURITY_MODEL.md
examples/: http_quota.rs  llm_pipeline.rs  task_runner.rs
src/: budget.rs  dim.rs  error.rs  fixed_map.rs  lib.rs  verdict.rs
tests/: proptest.rs
